[tool.poetry]
name = "test_llama_parse"
version = "0.1.0"
description = ""
authors = ["Frank Zhang <frankzhang123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "~0.10.44"
llama-index-vector-stores-milvus = "~0.1.17"
FlagEmbedding = "~1.2.10"
torch = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
